fixed issue with certifications overlapping with nav bar

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,7 +9,7 @@
 .custom-figure {
     display: flex;
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     align-items: center;
     padding: 3%;
     background-size: cover;
